[build-system]
requires = ["setuptools>=70", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "jasna"
version = "0.5.0-alpha5"
description = "Jasna"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
  "torch==2.10.0",
  "torchvision==0.25.0",
  "tensorrt==10.14.1.48.post1",
  "torch-tensorrt==2.10.0",
  "av>=16.1.0",
  "numpy",
  "psutil",
  "transformers>=5",
  "mmengine==0.10.7",
  "opencv-python",
  "tqdm",
  "customtkinter",
  "tkinterdnd2",
  "ultralytics",
  "nvidia-vfx==0.1.0.1",
]

[project.scripts]
jasna = "jasna.main:main"

[project.optional-dependencies]
dev = [
  "pyinstaller>=6.0",
  "pytest",
  "pytest-cov",
  "scikit-build",
]

[tool.setuptools]
packages = ["jasna", "jasna.gui", "jasna.mosaic", "jasna.restorer", "jasna.trt"]

[tool.pytest.ini_options]
testpaths = ["tests"]
filterwarnings = [
  "ignore:'maxsplit' is passed as positional argument:DeprecationWarning:mmengine\\.utils\\.misc",
]

